2022-10-04T16:28:54Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3183819189
* notice: last 14d: unq all: 2 30
* notice: prev accum: outdated-unq outdated-all / unq all: 197 368 / 216 399
* notice: next accum: outdated-unq outdated-all / unq all: 197 368 / 216 398
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-09-20]

2022-10-04T01:47:28Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3178798377
* notice: last 14d: unq all: 2 31
* notice: prev accum: outdated-unq outdated-all / unq all: 195 365 / 215 397
* notice: next accum: outdated-unq outdated-all / unq all: 197 368 / 216 399
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-19] / []

2022-10-03T16:31:11Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3175812720
* notice: last 14d: unq all: 2 32
* notice: prev accum: outdated-unq outdated-all / unq all: 195 365 / 215 398
* notice: next accum: outdated-unq outdated-all / unq all: 195 365 / 215 397
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +2 +3 -1 -2 / 1 1
* notice: removed / changed dates: [] / [2022-09-19]

2022-10-03T08:25:37Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3172670027
* notice: last 14d: unq all: 2 33
* notice: prev accum: outdated-unq outdated-all / unq all: 195 365 / 216 399
* notice: next accum: outdated-unq outdated-all / unq all: 195 365 / 215 398
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +3 -1 -1 / 1 2
* notice: removed / changed dates: [] / [2022-09-19]

2022-10-03T01:37:52Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3170925052