@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-04T16:28:54Z",
-  "count_outdated" : 368,
-  "uniques_outdated" : 197,
-  "count" : 398,
+  "timestamp" : "2022-10-05T01:44:18Z",
+  "count_outdated" : 370,
+  "uniques_outdated" : 198,
+  "count" : 399,
   "uniques" : 216,
   "clones" : [
-    {
-      "timestamp": "2022-09-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-21T00:00:00Z",
       "count": 1,
