@@ -1,3 +1,11 @@
+2022-10-05T01:44:18Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3186707354
+* notice: last 14d: unq all: 2 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 197 368 / 216 398
+* notice: next accum: outdated-unq outdated-all / unq all: 198 370 / 216 399
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-20] / []
+
 2022-10-04T16:28:54Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3183819189
 * notice: last 14d: unq all: 2 30
